After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778815 - typo in gstv4l2object's _acquire_format() set of error messages
typo in gstv4l2object's _acquire_format() set of error messages
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.10.0
Other Linux
: Normal minor
: 1.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-17 09:16 UTC by tmtfx
Modified: 2017-02-22 09:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2: fix 'devices' typo in _acquire_format() errors (1.20 KB, patch)
2017-02-18 00:05 UTC, Reynaldo H. Verdejo Pinochet
committed Details | Review

Description tmtfx 2017-02-17 09:16:44 UTC
In the po file "Video devices uses an unsupported interlacing method."

Is "Video devices uses..." singular or plural?
Comment 1 Reynaldo H. Verdejo Pinochet 2017-02-18 00:03:48 UTC
It is singular on "device".

There's a typo on the original message. It should read "Video device uses.." instead. Hope it helps
Comment 2 Reynaldo H. Verdejo Pinochet 2017-02-18 00:05:07 UTC
Created attachment 346114 [details] [review]
v4l2: fix 'devices' typo in _acquire_format() errors
Comment 3 Reynaldo H. Verdejo Pinochet 2017-02-21 18:20:18 UTC
Review of attachment 346114 [details] [review]:

Committed as:

commit b460f18f1724431229c7ecb98737e9fc3fa7e4c9
Author: Reynaldo H. Verdejo Pinochet <reynaldo@osg.samsung.com>
Date:   Fri Feb 17 15:50:32 2017 -0800

    v4l2: fix typo in _acquire_format() error messages
    
    Fixes:
    
    https://bugzilla.gnome.org/show_bug.cgi?id=778815
Comment 4 Nicolas Dufresne (ndufresne) 2017-02-22 09:15:50 UTC
In 1.10 as 7f554fcf739cea4e70a16f57d558a590200bea66
Comment 5 Nicolas Dufresne (ndufresne) 2017-02-22 09:19:04 UTC
Wrong ref, 1.10 as 58c3b8861c00e68e0b39f3a1c2cd72b213aa97b3