v4l2: fix typo in _acquire_format() error messages

Fixes:

https://bugzilla.gnome.org/show_bug.cgi?id=778815